--- a/djangovue/backend/templates/base.html
+++ b/djangovue/backend/templates/base.html
@@ -6,19 +6,38 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+        <link rel="stylesheet" href="static/main.css">
         <title>Document</title>
         {% endblock %}
     </head>
     <body>
-         
+        <div id="sidebar">
+            <div class="toggle-btn" onclick="openMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul>
+                <li>Меню сайта</li>
+                <li><a href="/">Главная</a></li>
+                <li><a href="/">Контакты</a></li>
+                <li><a href="/">Про нас</a></li>
+            </ul>
+        </div>
+    
         {% block body %}
             {% block content %}
             
             {% endblock %}
         {% endblock %}
-
-
-        <script src="static/dist/js/app.js"></script>
+    
+        <script>
+        function openMenu() {
+            document.getElementById("sidebar").classList.toggle("active");
+    
+        }
+        </script>
     </body>
     </html>
 {% endblock %}
